changed design to solve alignment issues

--- a/bz_custom.css
+++ b/bz_custom.css
@@ -1081,7 +1081,7 @@ td .bz-practice-box {
 	margin-left: 0;
 }
 #bz-module-nav ul {
-	border-left: solid 1px #bbb;	
+	/*border-left: solid 1px #bbb;*/
 }
 #bz-module-nav > li > ul {
 	border-left: transparent;
@@ -1108,6 +1108,7 @@ td .bz-practice-box {
 	display: block;
 	color: #555;
 	text-decoration: none;
+	position: relative;
 }
 #bz-module-nav a:hover {
     color: #0087c2;
@@ -1149,20 +1150,25 @@ td .bz-practice-box {
 	content: "\2716";
 	padding-left: 0.5em;
 	font-size: 8px;
+	font-weight: normal;
+	font-family: Arial, sans-serif;
 	display: inline-block;
 	transform: rotate(45deg);
-	position: relative;
-	top: -3px;
+	position: absolute;
+	top: 0;
+	left: -12px;
 	transition: all 0.5s;
 }
 #bz-module-nav .expanded::after {
 	content: "\2716";
 	padding-left: 0.5em;
 	font-size: 8px;
+	font-weight: normal;
+	font-family: Arial, sans-serif;
 	display: inline-block;
-	position: relative;
-	top: -2px;
-	left: -1px;
+	position: absolute;
+	top: 0;
+	left: -13px;
 	transition: all 0.5s;
 }
 
